--- a/AndroidFiAe02/app/src/main/AndroidManifest.xml
+++ b/AndroidFiAe02/app/src/main/AndroidManifest.xml
@@ -37,6 +37,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".OtherActivity"
+            android:label="Other Activity"
+            android:parentActivityName=".MenuActivity"><!-- nach Android 4.0 -->
+            <!-- bis Android 4.0 -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MenuActivity" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".StringsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
